--- a/firstproject/pubspec.yaml
+++ b/firstproject/pubspec.yaml
@@ -34,8 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^2.3.1
+  google_fonts: ^3.0.1
   velocity_x: ^3.5.1
+  http: ^0.13.5
+
 
 dev_dependencies:
   flutter_test:
